OO-4219: more scanning and escaping